@@ -173,7 +173,9 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x432, "MMC-5 T10/1675-D revision 04"},
     {0x434, "MMC-5 ANSI INCITS 430-2007"},
     {0x440, "OSD-2 (no version claimed)"},
+    {0x444, "OSD-2 T10/1729-D revision 4"},
     {0x460, "SPC-4 (no version claimed)"},
+    {0x461, "SPC-4 T10/1713-D revision 16"},
     {0x480, "SMC-3 (no version claimed)"},
     {0x4a0, "ADC-2 (no version claimed)"},
     {0x4a7, "ADC-2 T10/1741-D revision 7"},
@@ -181,6 +183,8 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x4c0, "SBC-3 (no version claimed)"},
     {0x4e0, "MMC-6 (no version claimed)"},
     {0x500, "ADC-3 (no version claimed)"},
+    {0x520, "SSC-4 (no version claimed)"},
+    {0x560, "OSD-3 (no version claimed)"},
     {0x820, "SSA-TL2 (no version claimed)"},
     {0x83b, "SSA-TL2 T10/1147-D revision 05b"},
     {0x83c, "SSA-TL2 ANSI INCITS 308-1998"},
@@ -234,6 +238,7 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0xa1c, "FCP-3 ISO/IEC 14776-223"},
     {0xa20, "ADT-2 (no version claimed)"},
     {0xa40, "FCP-4 (no version claimed)"},
+    {0xa42, "FCP-4 T10/1828-D revision 01"},
     {0xaa0, "SPI (no version claimed)"},
     {0xab9, "SPI T10/0855-D revision 15a"},
     {0xaba, "SPI ANSI INCITS 253-1995"},
@@ -277,6 +282,8 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0xc11, "SAS-1.1 ANSI INCITS 417-2006"},
     {0xc20, "SAS-2 (no version claimed)"},
     {0xc23, "SAS-2 T10/1760-D revision 14"},
+    {0xc27, "SAS-2 T10/1760-D revision 15"},
+    {0xc40, "SAS-2.1 (no version claimed)"},
     {0xd20, "FC-PH (no version claimed)"},
     {0xd3b, "FC-PH ANSI INCITS 230-1994"},
     {0xd3c, "FC-PH ANSI INCITS 230-1994 with Amnd 1 ANSI INCITS "
@@ -309,15 +316,21 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0xe42, "FC-SP T11/1570-D revision 1.6"},
     {0xe45, "FC-SP ANSI INCITS 426-2007"},
     {0xe60, "FC-PI-3 (no version claimed)"},
+    {0xe62, "FC-PI-3 T11/1625-D revision 2.0"},
     {0xe80, "FC-PI-4 (no version claimed)"},
+    {0xe82, "FC-PI-4 T11/1647-D revision 8.0"},
     {0xea0, "FC 10GFC (no version claimed)"},
     {0xea2, "FC 10GFC ANSI INCITS 364-2003"},
     {0xea3, "FC 10GFC ISO/IEC 14165-116"},
+    {0xea6, "FC 10GFC ANSI INCITS 364-2003 with AM1 ANSI INCITS 364/AM1-2007"},
     {0xec0, "FC-SP-2 (no version claimed)"},
     {0xee0, "FC-FS-3 (no version claimed)"},
     {0xf00, "FC-LS-2 (no version claimed)"},
+    {0xf20, "FC-PI-5 (no version claimed)"},
+    {0x12c0, "FC-DA-2 (no version claimed)"},
     {0x12e0, "FC-DA (no version claimed)"},
     {0x12e2, "FC-DA T11/1513-DT revision 3.1"},
+    {0x12e8, "FC-DA ANSI INCITS TR-36 2004"},
     {0x1300, "FC-Tape (no version claimed)"},
     {0x1301, "FC-Tape T11/1315-D revision 1.16"},
     {0x131b, "FC-Tape T11/1315-D revision 1.17"},
@@ -357,5 +370,9 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x1eab, "SAT T10/1711-D rev 9"},
     {0x1ead, "SAT ANSI INCITS 431-2007"},
     {0x1ec0, "SAT-2 (no version claimed)"},
+    {0x1ec4, "SAT-2 T10/1826-D revision 6"},
+    {0x1ee0, "SAT-3 (no version claimed)"},
+    {0x20a0, "SPL (no version claimed)"},
+    {0xffff, NULL},
 };
 
